added the media quary selecttor part

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <main>
         <!-- habits -->
         <div class="section-part">
-            <h1 class="section-heading">Change your Habits</h1>
+            <h2 class="section-heading">Change your Habits</h2>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a
                 gym.
             </p>
@@ -93,7 +93,7 @@
                 <h1>Run an Extra <br>Mile Easily</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
                     gym. With hundreds of professional workouts.</p>
-                <button class="btn-primary">Join Now</button>
+                <button class="btn-primary1">Join Now</button>
             </div>
 
             <div class="walk-img">
@@ -102,7 +102,7 @@
         </section>
 
         <!-- Exercises -->
-        <section>
+        <section class="hidden">
             <div class="exercise-part">
                 <h1 class="exercise-heading">Trainings and Exercises</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access
@@ -138,7 +138,7 @@
         </div>
         <section class="bmi-section">
             <div class="bmi-section-leftPart">
-                <h1 class="bmi-chart-heading">BMI Calculator Chart</h1>
+                <h3 class="bmi-chart-heading">BMI Calculator Chart</h3>
                 <table>
                     <tr>
                         <th>BMI</th>
@@ -165,16 +165,12 @@
                 <h1>Calculate your BMI</h1>
                 <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a
                     gym. </p>
-                <div>
+                <div class="Height-weight">
                     <input type="text" placeholder="Height/cm">
                     <input type="text" placeholder="Weight/kg">
                 </div>
                 <div class="age-sex">
-                    <input type="text" placeholder="Age">
-                    <div class="gender-icon">
-                        <input type="text" placeholder="Sex">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </div>
+                    <input type="text" placeholder="Age">    <input type="text" placeholder="Sex">    
                 </div>
                 <div class="last-input">
                     <input class="" type="text" placeholder="Select an activity factor">
@@ -185,13 +181,13 @@
 
 
         <!-- out team -->
-        <div class="section-part">
+        <div class="section-part hidden">
             <h1 class="section-heading">Meet Our Team</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a
                 gym.
             </p>
         </div>
-        <section class="team-container">
+        <section class="team-container hidden">
             <div class="team-image-top">
                 <img class="image-top1" src="images/trainer1.png" alt="">
                 <img class="image-top2" src="images/trainer2.png" alt="">
@@ -204,7 +200,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer hidden">
         <div class="footer-section">
             <div class="fitness-1">
                 <h1>Fitness</h1>
