--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
 
 
         <!-- out team -->
-        <div class="section-part hidden">
+        <div class="section-part">
             <h1 class="section-heading">Meet Our Team</h1>
             <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a
                 gym.
             </p>
         </div>
-        <section class="team-container hidden">
+        <section class="team-container">
             <div class="team-image-top">
                 <img class="image-top1" src="images/trainer1.png" alt="">
                 <img class="image-top2" src="images/trainer2.png" alt="">
@@ -200,7 +200,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer hidden">
+    <footer class="footer">
         <div class="footer-section">
             <div class="fitness-1">
                 <h1>Fitness</h1>
